--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
           />
           <label for="selectionSort" class="radio-label btn">Selection Sort</label>
 
+          <input class="radio-btn" value="heapSort" id="heapSort" type="radio" name="radio" />
+          <label for="heapSort" class="radio-label btn">Heap Sort</label>
+
           <input
             class="radio-btn"
-            value="heapSort"
-            id="heapSort"
+            value="quickSort"
+            id="quickSort"
             type="radio"
             name="radio"
             checked
           />
-          <label for="heapSort" class="radio-label btn">Heap Sort</label>
-
-          <input class="radio-btn" value="quickSort" id="quickSort" type="radio" name="radio" />
           <label for="quickSort" class="radio-label btn">Quick Sort</label>
         </div>
 
@@ -48,8 +48,8 @@
         </div>
       </div>
 
-      <p id="displayRange">77</p>
-      <input type="range" min="4" max="150" id="range" style="width: 100%" />
+      <p id="displayRange">10</p>
+      <input type="range" min="4" max="150" value="10" id="range" style="width: 100%" />
     </header>
 
     <main>
