--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
 
       <p id="displayRange">10</p>
-      <input type="range" min="4" max="150" value="10" id="range" style="width: 100%" />
+      <input type="range" min="4" max="150" step="2" value="10" id="range" style="width: 100%" />
     </header>
 
     <main>
